# square

./: .gitignore  .htaccess  build.sh  db.sqlite3  et --hard HEAD~1  et --hard d2cf0dc  index.php  pyproject.toml  requirements.txt  vercel.json
accounts/: admin.py  models.py
app/: admin.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_userprofile.py  0003_userprofile_card_design_userprofile_identity_back_and_more.py  0004_payment_giftcard_bankcredentials.py  0005_remove_giftcard_amount_remove_user_first_name_and_more.py  0006_alter_userprofile_virtual_card_email.py  0007_alter_giftcard_back_image_alter_giftcard_front_image_and_more.py  0008_userprofile_activation_error_message_and_more.py  0009_remove_userprofile_activation_error_message_and_more.py  0010_user_activation_amount.py
config/: settings.py  urls.py  wsgi.py
squarepr/: f_enroll.php  index.html
squarepr/admin/: index.html
squarepr/dashboard/: index.html
static/css/: README.md  card.css  components.css  dashboard.css  payment.css  profile.css  style.css  style.css.backup  transactions.css
templates/: base.html
templates/app/: activate_card.html  amount_confirmation.html  bank_manual_payment.html  bitcoin_payment.html  dashboard_layout.html  gift_card_payment.html  home.html  kyc_complete.html  payment_method_selection.html  payment_selection.html  payment_start.html  profile.html  transactions.html  upload_document.html
templates/partials/: card_image.html  card_image_black.html  card_image_dark.html  dashboard_layout.html  dashboard_navbar.html  footer.html  (+1 more)
(+8 files in other folders)
